2017-06-06 majiasheng <jiasheng.ma@yahoo.com>
	* Added friend relationship
	* Added NPC.php for user to check up on other users

2017-06-05 binzhou <binz545627124@gmail.com>
	* Comment works for now(temp).
	* Need to change the comment and post to Ajax, so the page doesn't refresh.

2017-06-05 majiasheng <jiasheng.ma@yahoo.com>
	* Added search.php to handle search bar searches
	* Added friend schema

2017-06-02 majiasheng <jiasheng.ma@yahoo.com>
	* Load posts from db 

2017-06-01 majiasheng <jiasheng.ma@yahoo.com> 
	* Updated database schema
	* Added Post function

2017-05-31 majiasheng <jiasheng.ma@yahoo.com>
	* Added logout.php 
    * Refactored: using PDO instead of MySQLI
	* Cleaned up main.php, ready to design database

2017-05-30 majiasheng <jiasheng.ma@yahoo.com>
	* Added: Load user profile picture if it exists, use default otherwise

2017-05-28 majiasheng <jiasheng.ma@yahoo.com>
	* Change main.php to load user info from db when logged in
	* Added post class

2017-05-27 majiasheng <jiasheng.ma@yahoo.com>
	* Added session for application, user info now persists across multiple pages
	  when logged in 

2017-05-24 majiasheng <jiasheng.ma@yahoo.com>
	* Refactored directory structure (v1)
